<resources>
    <string name="app_name">Suyuan</string>
    <string name="auth_title">用户认证</string>
    <string name="tab_login">登录</string>
    <string name="tab_register">注册</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_phone">手机号（可选）</string>
    <string name="action_login">登录</string>
    <string name="action_register">注册</string>
    <string name="nav_home">首页</string>
    <string name="nav_cart">购物车</string>
    <string name="nav_profile">个人中心</string>
    <string name="profile_title">个人中心</string>
    <string name="label_username">用户名</string>
    <string name="label_user_id">用户 ID</string>
    <string name="label_user_role">角色</string>
    <string name="label_version">版本信息</string>
    <string name="action_logout">退出登录</string>
    <string name="logout_confirm_title">确认退出登录</string>
    <string name="logout_confirm_message">退出后需要重新登录</string>
    <string name="action_back">返回</string>
    <string name="home_empty">暂无商品</string>
    <string name="home_error">商品加载失败</string>
    <string name="cart_empty">购物车为空</string>
    <string name="cart_error">购物车加载失败</string>
    <string name="action_retry">重试</string>
    <string name="action_search">搜索</string>
    <string name="action_add_cart">加入购物车</string>
    <string name="action_checkout">去结算</string>
    <string name="action_delete">删除</string>
    <string name="action_confirm_generic">确认</string>
    <string name="label_total">合计</string>
    <string name="price_value">¥%1$s</string>
    <string name="price_default">¥0.00</string>
    <string name="address_name_phone">%1$s  %2$s</string>
    <string name="indicator_value">%1$d/%2$d</string>
    <string name="indicator_default">0/0</string>
    <string name="page_info">第%1$d/%2$d页</string>
    <string name="page_prev">上一页</string>
    <string name="page_next">下一页</string>
    <string name="symbol_minus">-</string>
    <string name="symbol_plus">+</string>
    <string name="quantity_default">1</string>
    <string name="label_stock_value">库存：%1$d</string>
    <string name="label_origin_value">产地：%1$s</string>
    <string name="detail_error">商品详情加载失败</string>
    <string name="product_detail_title">商品详情</string>
    <string name="product_search_hint">输入商品名称</string>
    <string name="toast_cache_used">已显示缓存数据</string>
    <string name="toast_cart_added">已加入购物车</string>
    <string name="toast_cart_local">已加入本地购物车，联网后可同步</string>
    <string name="action_edit">编辑</string>
    <string name="action_cancel">取消</string>
    <string name="action_pay">去支付</string>
    <string name="action_confirm">确认收货</string>
    <string name="action_manage_address">管理地址</string>
    <string name="action_orders">我的订单</string>
    <string name="action_addresses">地址管理</string>
    <string name="label_receiver">收货人</string>
    <string name="label_phone">手机号</string>
    <string name="label_province">省份</string>
    <string name="label_city">城市</string>
    <string name="label_detail">详细地址</string>
    <string name="label_address">收货地址</string>
    <string name="label_quantity_value">数量：%1$d</string>
    <string name="address_title">地址管理</string>
    <string name="address_add">新增地址</string>
    <string name="address_edit">编辑地址</string>
    <string name="address_empty">暂无收货地址</string>
    <string name="address_default">默认</string>
    <string name="address_set_default">设为默认</string>
    <string name="address_save">保存地址</string>
    <string name="address_save_success">地址已保存</string>
    <string name="address_fill_required">请填写收货人/手机号/详细地址</string>
    <string name="address_delete_confirm">确定要删除该地址吗？</string>
    <string name="address_none_hint">暂无默认地址</string>
    <string name="address_none_action">请先添加收货地址</string>
    <string name="order_confirm_title">订单确认</string>
    <string name="order_goods_title">商品清单</string>
    <string name="order_memo_title">备注</string>
    <string name="order_memo_hint">备注（可选）</string>
    <string name="order_submit">提交订单</string>
    <string name="order_confirm_empty">请选择商品后再提交订单</string>
    <string name="order_create_failed">下单失败，请重试</string>
    <string name="order_pay_title">支付订单</string>
    <string name="order_pay_action">模拟支付</string>
    <string name="order_pay_success">支付成功</string>
    <string name="order_list_title">我的订单</string>
    <string name="order_detail_title">订单详情</string>
    <string name="order_status_pending">待付款</string>
    <string name="order_status_paid">待发货</string>
    <string name="order_status_shipped">待收货</string>
    <string name="order_status_completed">已完成</string>
    <string name="order_status_canceled">已取消</string>
    <string name="order_empty">暂无订单</string>
    <string name="order_error">订单加载失败</string>
    <string name="order_item_summary">%1$s 等%2$d件</string>
    <string name="order_item_summary_fallback">共%1$d件商品</string>
    <string name="order_item_summary_empty">订单商品</string>
    <string name="order_total_value">订单金额：%1$s</string>
    <string name="order_number_value">订单号：%1$s</string>
    <string name="order_time_value">下单时间：%1$s</string>
    <string name="order_pay_time_value">支付时间：%1$s</string>
    <string name="order_confirm_time_value">确认时间：%1$s</string>
    <string name="action_trace_scan">溯源扫码</string>
    <string name="action_trace_record">扫码记录</string>
    <string name="trace_scan_title">溯源扫码</string>
    <string name="trace_scan_prompt">对准二维码进行扫描</string>
    <string name="trace_input_hint">请输入溯源码</string>
    <string name="trace_action_scan">开始扫码</string>
    <string name="trace_action_query">查询</string>
    <string name="trace_action_record">查看扫码记录</string>
    <string name="trace_detail_title">溯源详情</string>
    <string name="trace_code_value">溯源码：%1$s</string>
    <string name="trace_product_value">产品：%1$s</string>
    <string name="trace_origin_value">产地：%1$s</string>
    <string name="trace_producer_value">生产方：%1$s</string>
    <string name="trace_batch_value">批次号：%1$s</string>
    <string name="trace_harvest_value">采收日期：%1$s</string>
    <string name="trace_process_value">加工信息：%1$s</string>
    <string name="trace_test_org_value">检测机构：%1$s</string>
    <string name="trace_test_date_value">检测日期：%1$s</string>
    <string name="trace_test_result_value">检测结论：%1$s</string>
    <string name="trace_report_value">检测报告：%1$s</string>
    <string name="trace_logistics_title">物流信息</string>
    <string name="trace_logistics_empty">暂无物流信息</string>
    <string name="trace_detail_error">溯源信息加载失败</string>
    <string name="trace_code_invalid">溯源码无效</string>
    <string name="trace_record_title">扫码记录</string>
    <string name="trace_record_empty">暂无扫码记录</string>
    <string name="admin_no_permission">无权限</string>
    <string name="admin_home_title">管理端首页</string>
    <string name="admin_entry_product">商品管理</string>
    <string name="admin_entry_order">订单管理</string>
    <string name="admin_entry_trace">溯源管理</string>
    <string name="admin_product_title">商品管理</string>
    <string name="admin_product_add">新增商品</string>
    <string name="admin_product_empty">暂无商品</string>
    <string name="admin_product_toggle_status">上/下架</string>
    <string name="admin_product_update_stock">修改库存</string>
    <string name="admin_product_edit_title">商品编辑</string>
    <string name="admin_product_name_hint">请输入商品名称</string>
    <string name="admin_product_price_hint">价格（元）</string>
    <string name="admin_product_stock_hint">库存</string>
    <string name="admin_product_origin_hint">产地（可选）</string>
    <string name="admin_product_cover_hint">封面图地址（URL）</string>
    <string name="admin_product_status_label">状态</string>
    <string name="admin_product_status_online">上架</string>
    <string name="admin_product_desc_hint">产品描述</string>
    <string name="action_save">保存</string>
    <string name="action_detail">详情</string>
    <string name="admin_order_title">订单管理</string>
    <string name="admin_order_status_all">全部</string>
    <string name="admin_order_empty">暂无订单</string>
    <string name="admin_order_error">订单加载失败</string>
    <string name="admin_order_detail_title">订单详情</string>
    <string name="admin_order_action_ship">发货</string>
    <string name="admin_ship_company_hint">快递公司</string>
    <string name="admin_ship_no_hint">快递单号</string>
    <string name="admin_trace_title">溯源管理</string>
    <string name="admin_trace_add">新增批次</string>
    <string name="admin_trace_empty">暂无溯源批次</string>
    <string name="admin_trace_action_qrcode">二维码</string>
    <string name="admin_trace_action_logistics">添加物流</string>
    <string name="admin_trace_edit_title">溯源批次编辑</string>
    <string name="admin_trace_product_id_hint">产品ID</string>
    <string name="admin_trace_batch_no_hint">批次号（可选）</string>
    <string name="admin_trace_origin_hint">产地</string>
    <string name="admin_trace_producer_hint">生产方</string>
    <string name="admin_trace_harvest_hint">采收日期（yyyy-MM-dd）</string>
    <string name="admin_trace_process_hint">加工信息</string>
    <string name="admin_trace_test_org_hint">检测机构</string>
    <string name="admin_trace_test_date_hint">检测日期（yyyy-MM-dd）</string>
    <string name="admin_trace_test_result_hint">检测结论</string>
    <string name="admin_trace_report_hint">报告地址（URL）</string>
    <string name="admin_trace_logistics_title">添加物流节点</string>
    <string name="admin_trace_logistics_time_hint">节点时间（yyyy-MM-ddTHH:mm:ss）</string>
    <string name="admin_trace_logistics_location_hint">节点地点</string>
    <string name="admin_trace_logistics_status_hint">状态描述</string>
    <string name="admin_trace_qrcode_error">二维码加载失败</string>
    <string name="error_network">网络异常，请稍后重试</string>
    <string name="admin_product_delete_confirm">确认删除该商品？</string>
    <string name="admin_product_load_failed">商品加载失败</string>
    <string name="admin_product_status_failed">状态更新失败</string>
    <string name="admin_product_stock_failed">库存更新失败</string>
    <string name="admin_product_delete_failed">删除失败</string>
    <string name="admin_product_save_failed">保存失败</string>
    <string name="admin_product_save_success">保存成功</string>
    <string name="admin_product_name_required">请输入商品名称</string>
    <string name="admin_product_price_required">请输入商品价格</string>
    <string name="admin_product_price_format_error">价格格式错误</string>
    <string name="admin_product_stock_required">请输入库存</string>
    <string name="admin_product_stock_negative">库存不能小于0</string>
    <string name="admin_product_stock_format_error">库存格式错误</string>
    <string name="admin_order_ship_required">请填写快递信息</string>
    <string name="admin_order_ship_failed">发货失败</string>
    <string name="admin_order_ship_time_value">发货时间：%1$s</string>
    <string name="admin_order_express_value">快递：%1$s %2$s</string>
    <string name="admin_trace_error">溯源加载失败</string>
    <string name="admin_trace_delete_failed">删除失败</string>
    <string name="admin_trace_delete_confirm">确认删除该批次？</string>
    <string name="admin_trace_save_failed">保存失败</string>
    <string name="admin_trace_save_success">保存成功</string>
    <string name="admin_trace_product_required">请输入产品ID</string>
    <string name="admin_trace_product_format_error">产品ID格式错误</string>
    <string name="admin_trace_origin_required">请输入产地</string>
    <string name="admin_trace_producer_required">请输入生产方</string>
    <string name="admin_trace_logistics_failed">物流节点保存失败</string>
    <string name="admin_trace_logistics_success">物流节点已保存</string>
    <string name="admin_trace_logistics_time_required">请输入节点时间</string>
    <string name="admin_trace_logistics_location_required">请输入节点地点</string>
    <string name="admin_trace_logistics_status_required">请输入状态描述</string>
    <string name="admin_product_status_offline">下架</string>
</resources>
