<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/admin_trace_logistics_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/spacing_l">

    <TextView
        android:id="@+id/admin_trace_logistics_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_trace_logistics_title"
        android:textAppearance="@style/TextAppearance.Suyuan.Title" />

    <EditText
        android:id="@+id/admin_trace_logistics_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        style="@style/Widget.Suyuan.EditText"
        android:hint="@string/admin_trace_logistics_time_hint"
        android:inputType="datetime" />

    <EditText
        android:id="@+id/admin_trace_logistics_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        style="@style/Widget.Suyuan.EditText"
        android:hint="@string/admin_trace_logistics_location_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/admin_trace_logistics_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        style="@style/Widget.Suyuan.EditText"
        android:hint="@string/admin_trace_logistics_status_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/admin_trace_logistics_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/spacing_l"
        android:text="@string/action_save" />
</LinearLayout>
