<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_xxl">

        <TextView
            android:id="@+id/trace_scan_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trace_scan_title"
            android:textAppearance="@style/TextAppearance.Suyuan.Title" />

        <Button
            android:id="@+id/trace_scan_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/spacing_xl"
            android:text="@string/trace_action_scan" />

        <EditText
            android:id="@+id/trace_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_l"
            style="@style/Widget.Suyuan.EditText"
            android:hint="@string/trace_input_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_body" />

        <Button
            android:id="@+id/trace_query_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/spacing_m"
            android:text="@string/trace_action_query" />

        <Button
            android:id="@+id/trace_record_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/spacing_m"
            style="@style/Widget.Suyuan.Button.Outline"
            android:text="@string/trace_action_record" />
    </LinearLayout>
</ScrollView>
