<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/admin_stock_dialog_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_l">

    <EditText
        android:id="@+id/admin_stock_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Suyuan.EditText"
        android:hint="@string/admin_product_stock_hint"
        android:inputType="number" />

    <LinearLayout
        android:id="@+id/admin_stock_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_l"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/admin_stock_cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/touch_target"
            style="@style/Widget.Suyuan.Button.Outline"
            android:text="@string/action_cancel" />

        <Button
            android:id="@+id/admin_stock_confirm"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/touch_target"
            android:layout_marginStart="@dimen/spacing_s"
            style="@style/Widget.Suyuan.Button"
            android:text="@string/action_confirm_generic" />
    </LinearLayout>
</LinearLayout>
